# Athenaeum

./: .gitignore  BUILD  MODULE.bazel  WORKSPACE
.circleci/: config.yml
dockerfiles/: BuildX.Dockerfile
moe/best/athenaeum/app/: BUILD  Main.kt
moe/best/athenaeum/app/command/: BUILD  BaseCommand.kt  Pattern.kt  Target.kt
moe/best/athenaeum/app/middleware/: BUILD  Metadata.kt
moe/best/athenaeum/app/middleware/aliases/: Aliases.kt  BUILD
moe/best/athenaeum/app/middleware/locales/: BUILD  Locales.kt  LocalesCommonMistakes.kt
moe/best/athenaeum/app/middleware/locales/common/: BUILD  LocalesCommonMistakes.kt
moe/best/athenaeum/app/middleware/metadata/: BUILD  Metadata.kt
moe/best/athenaeum/app/middleware/metadata/locales/: BUILD  Locales.kt
moe/best/athenaeum/app/routing/: BUILD  Bunny.kt
moe/best/athenaeum/app/startup/: BUILD  Module.kt
moe/best/athenaeum/app/startup/loader/: BUILD  Loader.kt
moe/best/athenaeum/app/startup/loader/root/: BUILD  RootLoader.kt
moe/best/athenaeum/app/udc/: BUILD  Google.kt  UDCLoader.generated.kt  UDCLoader.kt
moe/best/athenaeum/app/udc/dictionaries/: BUILD  DictionariesLoader.generated.kt  Jisho.kt
moe/best/athenaeum/app/udc/knowledge/: BUILD  KnowledgeLoader.generated.kt  Wikipedia.kt
moe/best/athenaeum/app/udc/social/: BUILD  SocialLoader.generated.kt  YouTube.kt
moe/best/athenaeum/apptests/: BUILD  helpers.bzl
moe/best/athenaeum/apptests/common/: BUILD  ModuleTestBase.kt  helpers.bzl
moe/best/athenaeum/apptests/udc/: BUILD  GoogleTest.kt
moe/best/athenaeum/apptests/udc/dictionaries/: BUILD  JishoTest.kt
moe/best/athenaeum/apptests/udc/knowledge/: BUILD  WikipediaTest.kt
moe/best/athenaeum/apptests/udc/social/: BUILD  YouTubeTest.kt
moe/best/athenaeum/resources/: BUILD  application.conf
(+2 files in other folders)
